# app/resources/organization_unit.py
@@ -1,0 +1,261 @@
+"""
+module: organization_unit
+"""
+from flask import request
+from marshmallow import ValidationError
+from sqlalchemy.exc import IntegrityError, SQLAlchemyError
+from flask_restful import Resource
+
+from app.models import db
+from app.logger import logger
+from app.models.organization_unit import OrganizationUnit
+from app.schemas.organization_unit_schema import OrganizationUnitSchema
+
+
+class OrganizationUnitListResource(Resource):
+    """
+    Resource for managing the collection of organization units.
+
+    Methods:
+        get():
+            Retrieve all organization units from the database.
+
+        post():
+            Create a new organization unit with the provided data.
+    """
+
+    def get(self):
+        """
+        Retrieve all organization units.
+
+        Returns:
+            tuple: A tuple containing a list of serialized organization units and the
+            HTTP status code 200.
+        """
+        logger.info("Retrieving all organization units")
+
+        org_units = OrganizationUnit.get_all()
+        org_unit_schema = OrganizationUnitSchema(session=db.session, many=True)
+        return org_unit_schema.dump(org_units), 200
+
+    def post(self):
+        """
+        Create a new organization unit.
+
+        Expects:
+            JSON payload with at least the 'name' and 'company_id' fields.
+
+        Returns:
+            tuple: The serialized created organization unit and HTTP status code 201
+                   on success.
+            tuple: Error message and HTTP status code 400 or 500 on failure.
+        """
+        logger.info("Creating a new organization unit")
+        json_data = request.get_json()
+        org_unit_schema = OrganizationUnitSchema(session=db.session)
+        org_unit_schema.context = {}
+
+        try:
+            new_org_unit = org_unit_schema.load(json_data)
+            db.session.add(new_org_unit)
+            db.session.flush()
+            new_org_unit.update_path_and_level()
+            db.session.commit()
+            return org_unit_schema.dump(new_org_unit), 201
+        except ValidationError as err:
+            logger.error("Validation error: %s", str(err))
+            return {"error": str(err)}, 400
+        except IntegrityError as err:
+            db.session.rollback()
+            logger.error("Integrity error, possibly duplicate entry: %s", str(err))
+            return {"error": "Integrity error, possibly duplicate entry."}, 400
+        except SQLAlchemyError as err:
+            db.session.rollback()
+            logger.error("Database error: %s", str(err))
+            return {"error": "Database error occurred."}, 500
+
+class OrganizationUnitResource(Resource):
+    """
+    Resource for managing a single organization unit.
+
+    Methods:
+        get():
+            Retrieve an organization unit by its ID.
+
+        put():
+            Update an existing organization unit by its ID.
+
+        delete():
+            Delete an organization unit by its ID.
+    """
+
+    def get(self, unit_id):
+        """
+        Retrieve an organization unit by its ID.
+
+        Args:
+            unit_id (str): The ID of the organization unit.
+
+        Returns:
+            tuple: The serialized organization unit and HTTP status code 200 on success.
+                    HTTP status code 404 if the organization unit is not found.
+        """
+        logger.info("Retrieving organization unit with ID %s", unit_id)
+
+        org_unit = OrganizationUnit.get_by_id(unit_id)
+        if not org_unit:
+            logger.warning("Organization unit with ID %s not found", unit_id)
+            return {"error": "Organization unit not found"}, 404
+
+        org_unit_schema = OrganizationUnitSchema(session=db.session)
+        return org_unit_schema.dump(org_unit), 200
+
+    def put(self, unit_id):
+        """
+        Update an existing organization unit by its ID.
+
+        Args:
+            unit_id (str): The ID of the organization unit to update.
+
+        Expects:
+            JSON payload with fields to update.
+
+        Returns:
+            tuple: The serialized updated organization unit and HTTP status code 200 on success.
+                    HTTP status code 404 if the organization unit is not found.
+                    HTTP status code 400 for validation errors.
+        """
+        logger.info("Updating organization unit with ID %s", unit_id)
+        json_data = request.get_json()
+        org_unit_schema = OrganizationUnitSchema(session=db.session)
+        org_unit_schema.context = {'current_id': unit_id}
+
+        try:
+            org_unit = OrganizationUnit.get_by_id(unit_id)
+            if not org_unit:
+                logger.warning("Organization unit with ID %s not found", unit_id)
+                return {"error": "Organization unit not found"}, 404
+
+
+            updated_org_unit = org_unit_schema.load(json_data, instance=org_unit)
+            updated_org_unit.context = {'current_id': unit_id}
+            updated_org_unit.update_path_and_level()
+            db.session.commit()
+            return org_unit_schema.dump(updated_org_unit), 200
+        except ValidationError as err:
+            logger.error("Validation error: %s", str(err))
+            return {"error": str(err)}, 400
+        except IntegrityError as err:
+            db.session.rollback()
+            logger.error("Integrity error, possibly duplicate entry: %s", str(err))
+            return {"error": "Integrity error, possibly duplicate entry."}, 400
+        except SQLAlchemyError as err:
+            db.session.rollback()
+            logger.error("Database error: %s", str(err))
+            return {"error": "Database error occurred."}, 500
+
+    def patch(self, unit_id):
+        """
+        Partially update an existing organization unit by its ID.
+
+        Args:
+            unit_id (str): The ID of the organization unit to update.
+
+        Expects:
+            JSON payload with fields to update.
+
+        Returns:
+            tuple: The serialized updated organization unit and HTTP status code 200 on success.
+                    HTTP status code 404 if the organization unit is not found.
+                    HTTP status code 400 for validation errors.
+        """
+        logger.info("Partially updating organization unit with ID %s", unit_id)
+        json_data = request.get_json()
+        org_unit_schema = OrganizationUnitSchema(session=db.session, partial=True)
+        org_unit_schema.context = {'current_id': unit_id}
+        try:
+            org_unit = OrganizationUnit.get_by_id(unit_id)
+            if not org_unit:
+                logger.warning("Organization unit with ID %s not found", unit_id)
+                return {"error": "Organization unit not found"}, 404
+
+            # Passe le contexte pour la validation de parent_id
+            updated_org_unit = org_unit_schema.load(json_data, instance=org_unit)
+            updated_org_unit.update_path_and_level()
+            db.session.commit()
+            return org_unit_schema.dump(updated_org_unit), 200
+        except ValidationError as err:
+            logger.error("Validation error: %s", str(err))
+            return {"error": str(err)}, 400
+        except IntegrityError as err:
+            db.session.rollback()
+            logger.error("Integrity error, possibly duplicate entry: %s", str(err))
+            return {"error": "Integrity error, possibly duplicate entry."}, 400
+        except SQLAlchemyError as err:
+            db.session.rollback()
+            logger.error("Database error: %s", str(err))
+            return {"error": "Database error occurred."}, 500
+
+    def delete(self, unit_id):
+        """
+        Delete an organization unit by its ID, including all its descendants.
+
+        Args:
+            unit_id (str): The ID of the organization unit to delete.
+
+        Returns:
+            tuple: HTTP status code 204 on success.
+                    HTTP status code 404 if the organization unit is not found.
+        """
+        logger.info("Deleting organization unit with ID %s and all its descendants", unit_id)
+
+        org_unit = OrganizationUnit.get_by_id(unit_id)
+        if not org_unit:
+            logger.warning("Organization unit with ID %s not found", unit_id)
+            return {"error": "Organization unit not found"}, 404
+
+        try:
+            # Suppression récursive des enfants
+            def delete_descendants(unit):
+                children = OrganizationUnit.get_children(unit.id)
+                for child in children:
+                    delete_descendants(child)
+                    db.session.delete(child)
+
+            delete_descendants(org_unit)
+            db.session.delete(org_unit)
+            db.session.commit()
+            return '', 204
+        except IntegrityError as err:
+            db.session.rollback()
+            logger.error("Integrity error while deleting organization unit: %s", str(err))
+            return {"error": "Integrity error, possibly due to foreign key constraints."}, 400
+        except SQLAlchemyError as err:
+            db.session.rollback()
+            logger.error("Database error while deleting organization unit: %s", str(err))
+            return {"error": "Database error occurred."}, 500
+
+class OrganizationUnitChildrenResource(Resource):
+    """
+    Resource for managing the children of an organization unit.
+
+    Methods:
+        get():
+            Retrieve all children of a specific organization unit.
+    """
+
+    def get(self, unit_id):
+        """
+        Retrieve all children of a specific organization unit.
+
+        Args:
+            unit_id (str): The ID of the parent organization unit.
+
+        Returns:
+            tuple: A list of serialized child organization units and HTTP status code 200.
+        """
+        logger.info("Retrieving children of organization unit with ID %s", unit_id)
+
+        children = OrganizationUnit.get_children(unit_id)
+        org_unit_schema = OrganizationUnitSchema(session=db.session, many=True)
+        return org_unit_schema.dump(children), 200
